--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,7 @@
 service: video-api 
 
 plugins:
+# plugin convert typescript 
   - '@hewmen/serverless-plugin-typescript'  
   - serverless-plugin-optimize
   - serverless-offline
